apps/miniflux/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux-route
spec:
  hostnames:
    - miniflux.hridaya.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: miniflux
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
